# JSONCpp

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
example/reader/: stream_reader.cpp  string_reader.cpp
include/: CMakeLists.txt  config.h  error.h  json.h  literal.h  reader.h  type.h  utf.h  utils.h  value.h  value.inl  writer.h
src/: CMakeLists.txt  literal.cpp  reader.cpp  value.cpp  writer.cpp
